added navigation; added hero partialy

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Own Weather Ranking</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+	<meta charset="utf-8">
+	<title>Tutlo test</title>
+</head>
+
+<body>
+	<header>
+		<div class="container">
+			<a href="/"><img src="images/logo.png" alt="tutlo" class="header__logo"></a>
+			
+			<div class="navigation">
+				<a href="#Lorem" class="navigation__element">Lorem</a>
+				<a href="#Ipsum" class="navigation__element">Ipsum</a>
+				<a href="#Lorem Ipsum" class="navigation__element">Lorem Ipsum</a>
+				<a href="#Ipsum Lorem" class="navigation__element">Ipsum Lorem</a>
+			</div>
+			<img src="images/hamburger-svgrepo-com.svg" alt="nav" class="header__hamburger">
+		</div>
+		
+	</header>
+	<div class="hero">
+		<div class="container">
+			<div class="hero__text-part">
+				<h1 class="hero__title">For Tutlo</h1>
+				<p class="hero__subtitle">I'm example page for Tutlo. I hope I'll be good enought.</p>
+				
+				<a href="https://tutlo.com/pl" target="__blank" class="hero__button"><button>I'm a button</button></a>
+			</div>
+			
+			<img src="images/tutlo-laptop.png" alt="example laptop" class="hero__image">
+		</div>
+	</div>
+</body>
+
 </html>
