finished hero block

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,17 @@
 			<img src="images/tutlo-laptop.png" alt="example laptop" class="hero__image">
 		</div>
 	</div>
+	<div class="slider">
+		<div class="container">
+			<swiper-container>
+				<swiper-slide>Slide 1</swiper-slide>
+				<swiper-slide>Slide 2</swiper-slide>
+				<swiper-slide>Slide 3</swiper-slide>
+				<swiper-slide>Slide ...</swiper-slide>
+			</swiper-container>
+		</div>
+			
+	</div>
 </body>
 
 </html>
