--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div class="container">
-			<a href="/"><img src="images/logo.png" alt="tutlo" class="header__logo"></a>
+			<a href="/"><img src="images/logo.png" alt="tutlo" class="header__logo" /></a>
 			
 			<div class="navigation">
 				<a href="#Lorem" class="navigation__element">Lorem</a>
@@ -17,7 +17,7 @@
 				<a href="#Lorem Ipsum" class="navigation__element">Lorem Ipsum</a>
 				<a href="#Ipsum Lorem" class="navigation__element">Ipsum Lorem</a>
 			</div>
-			<img src="images/hamburger-svgrepo-com.svg" alt="nav" class="header__hamburger">
+			<img src="images/hamburger-svgrepo-com.svg" alt="nav" class="header__hamburger" />
 		</div>
 		
 	</header>
@@ -30,17 +30,31 @@
 				<a href="https://tutlo.com/pl" target="__blank" class="hero__button"><button>I'm a button</button></a>
 			</div>
 			
-			<img src="images/tutlo-laptop.png" alt="example laptop" class="hero__image">
+			<img src="images/tutlo-laptop.png" alt="example laptop" class="hero__image" />
 		</div>
 	</div>
 	<div class="slider">
 		<div class="container">
-			<swiper-container>
-				<swiper-slide>Slide 1</swiper-slide>
-				<swiper-slide>Slide 2</swiper-slide>
-				<swiper-slide>Slide 3</swiper-slide>
-				<swiper-slide>Slide ...</swiper-slide>
-			</swiper-container>
+			<div class="custom-swiper-button-prev swiper-navigation"><img src="images/left-chevron-svgrepo-com.svg" /></div>
+			<div class="swiper">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<p class="swiper-slide__text">I wholeheartedly recommend this developer.</p>
+						<h3 class="swiper-slide__signature">mr. Recommend Guy</h3>
+					</div>
+					<div class="swiper-slide">
+						<p class="swiper-slide__text">You couldn't really get any better then this!</p>
+						<h3 class="swiper-slide__signature">ms. Recommend Gall</h3>
+					</div>
+					<div class="swiper-slide">
+						<p class="swiper-slide__text">I can not believe it is not a butter.</p>
+						<h3 class="swiper-slide__signature">perplexed customer at dairy store</h3>
+					</div>
+				</div>
+			
+			</div>
+			<div class="custom-swiper-button-next swiper-navigation"><img src="images/left-chevron-svgrepo-com.svg" /></div>
+  
 		</div>
 			
 	</div>
